# rendero

./: .gitignore  Cargo.toml  LICENSE
crates/core/: Cargo.toml
crates/core/src/: boolean.rs  document.rs  hit_test.rs  id.rs  layout.rs  lib.rs  node.rs  properties.rs  tree.rs
crates/crdt/: Cargo.toml
crates/crdt/src/: apply.rs  history.rs  lib.rs  operation.rs
crates/fig-import/: Cargo.toml
crates/fig-import/src/: blobs.rs  container.rs  decode.rs  error.rs  lib.rs  transform.rs  tree.rs
crates/renderer/: Cargo.toml
crates/renderer/src/: composite.rs  lib.rs  pipeline.rs  rasterize.rs  scene.rs  stroke.rs  svg.rs  text.rs  tile.rs  verify.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: bench.rs  canvas2d.rs  fig_import.rs  lib.rs  webgl.rs
demos/design-tool/: main.js
demos/earthquake-explorer/: index.html  main.js
demos/genome-browser/: extract_genome.py  index.html  main.js
demos/gis-map/: index.html  main.js
demos/neural-net/: extract_weights.py  index.html  main.js
demos/point-cloud/: index.html  main.js
demos/splat-viewer/: index.html  main.js
demos/stress-test/: index.html  main.js
demos/whiteboard/: index.html  main.js
docs/: index.html  islands.js  main.js  particles.js
docs/demos/design-tool/: index.html  main.js
docs/demos/earthquake-explorer/: index.html  main.js
docs/demos/genome-browser/: index.html  main.js
docs/demos/neural-net/: index.html  main.js
docs/demos/splat-viewer/: index.html  main.js  sort-worker.js  sw.js
docs/pkg/: rendero.d.ts  rendero.js  rendero_bg.wasm  rendero_bg.wasm.d.ts
www/: index-backup-2.html  index.html  main.js  text-sampler.js
