[package]
name = "rendero-renderer"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tile-based software renderer for Rendero — scene graph, rasterization, text, compositing"

[dependencies]
rendero-core = { path = "../core" }
glam = { workspace = true }
bytemuck = { workspace = true }
fontdue = { workspace = true }
