[package]
name = "rendero-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WASM bindings for the Rendero canvas engine"

[lib]
crate-type = ["cdylib"]

[dependencies]
rendero-core = { path = "../core" }
rendero-renderer = { path = "../renderer" }
rendero-crdt = { path = "../crdt" }
fig-import-crate = { path = "../fig-import", package = "rendero-fig-import" }
glam = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = "0.2"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "Path2d",
    "ImageData",
    "CanvasGradient",
    "CanvasWindingRule",
    "Document",
    "Window",
    "TextMetrics",
    "WebGl2RenderingContext",
    "WebGlBuffer",
    "WebGlProgram",
    "WebGlShader",
    "WebGlUniformLocation",
    "WebGlVertexArrayObject",
    "console",
]
